Handle missing data

--- a/studentScores/.vscode/launch.json
+++ b/studentScores/.vscode/launch.json
@@ -10,7 +10,7 @@
       "request": "launch",
       "preLaunchTask": "build",
       "program": "${workspaceFolder}/bin/Debug/net6.0/studentScores.exe",
-      "args": ["samples/studentScores.txt"],
+      "args": ["samples/studentScoresNA.txt"],
       "cwd": "${workspaceFolder}",
       "stopAtEntry": false,
       "console": "internalConsole"
