--- a/studentScores/studentScores.fsproj
+++ b/studentScores/studentScores.fsproj
@@ -7,6 +7,7 @@
     <Compile Include="Optional.fs" />
     <Compile Include="Float.fs" />
     <Compile Include="TestResult.fs" />
+    <Compile Include="SchoolCodes.fs" />
     <Compile Include="Student.fs" />
     <Compile Include="Summary.fs" />
     <Compile Include="Program.fs" />
